fixed text-align :art:

--- a/LAB10/style.css
+++ b/LAB10/style.css
@@ -60,6 +60,7 @@ h2 {
 .flex-1 div,
 .flex-2 div {
 	padding: 10px;
+	text-align: justify;
 }
 
 .plum {
